# SI5-Autonomous-Intelligent-Systems

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.rviz  launch_windows.ps1  pyproject.toml
src/camera_reader/: package.xml  setup.py
src/camera_reader/camera_reader/: config.json  gesture_config.json  reader.py  reader_simulation.py  utils.py  yolo_api.py
src/camera_reader/camera_reader/models/gestures/: YOLOv10n_gestures_640_INT8.onnx
src/camera_reader/config/: segmentation.yml
src/camera_reader/launch/: camera.launch.py
src/camera_reader_simulation/: package.xml  setup.cfg  setup.py
src/camera_reader_simulation/camera_reader_simulation/: config.json  reader_simulation.py
src/camera_reader_simulation/launch/: camera.launch.py
src/turtlebot3_descriptions/: package.xml
src/turtlebot3_descriptions/rviz/: model.rviz
src/turtlebot3_descriptions/urdf/: turtlebot3_burger_oak_d_pro.urdf
src/turtlebot3_gazebo/launch/: robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_world.launch.py
src/turtlebot3_gazebo/models/custom_box/: model.config  model.sdf
src/turtlebot3_gazebo/params/: turtlebot3_bridge.yaml
src/turtlebot3_launch/: CMakeLists.txt  package.xml
src/turtlebot3_launch/config/: nav2_params.yaml  nav2_params_deployed.yaml  slam_params.yaml
src/turtlebot3_launch/launch/: common.launch.py  common_computer.launch.py  deploy.launch.py  real.launch.py  simulation.launch.py
src/turtlebot3_orchestrator/: package.xml  setup.cfg  setup.py
src/turtlebot3_orchestrator/launch/: orchestrator.launch.py
src/turtlebot3_orchestrator/turtlebot3_orchestrator/: lifecycle_manager.py  orchestrator.py
src/turtlebot3_orchestrator/turtlebot3_orchestrator/handlers/: __init__.py  base_node_handler.py  pilot_node_handler.py
src/turtlebot3_pilot/: package.xml  setup.cfg  setup.py
src/turtlebot3_pilot/turtlebot3_pilot/: pilot.py
