[project]
name = "AIS"
version = "0.1.0"
description = "A ROS powered person-following Turtlebot controlled through hand gestures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catkin-pkg>=1.1.0",
    "empy>=4.2",
    "lark>=1.3.1",
    "numpy<3.0",
    "opencv-python<5.0",
]

[project.optional-dependencies]
deploy = [
    "depthai~=2.0",
]
sim = [
    "onnx>=1.19.0",
    "onnxruntime>=1.23.2",
    "torch==2.9.1+cpu",
    "torchvision==0.24.1+cpu",
    "ultralytics>=8.3.248",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
